--- a/Pyeon-Duck/Resources/StoryBoards/Start/Base.lproj/Main.storyboard
+++ b/Pyeon-Duck/Resources/StoryBoards/Start/Base.lproj/Main.storyboard
@@ -34,44 +34,38 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="i1I-za-L1O" kind="relationship" relationship="viewControllers" id="agF-e2-eYf"/>
-                        <segue destination="nni-oL-Yxs" kind="relationship" relationship="viewControllers" id="CPJ-BI-vaq"/>
-                        <segue destination="Fi4-mf-GGr" kind="relationship" relationship="viewControllers" id="ZfI-EX-V8S"/>
+                        <segue destination="JN0-ea-UG7" kind="relationship" relationship="viewControllers" id="fGD-lR-Lme"/>
+                        <segue destination="vhq-7c-X0Q" kind="relationship" relationship="viewControllers" id="ZWr-c2-xjt"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yEm-iW-2cT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-159" y="-100"/>
         </scene>
-        <!--Expiration-->
-        <scene sceneID="arI-E8-XOT">
+        <!--ExpirationRead-->
+        <scene sceneID="u2I-7Y-706">
             <objects>
-                <viewControllerPlaceholder storyboardName="Expiration" id="i1I-za-L1O" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="0Pg-rX-0uS"/>
+                <viewControllerPlaceholder storyboardName="ExpirationRead" id="JN0-ea-UG7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="4hv-LS-WX1"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CEa-dV-B6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fWC-I7-7nW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-481" y="389"/>
+            <point key="canvasLocation" x="-366" y="331"/>
         </scene>
-        <!--Stocks-->
-        <scene sceneID="Iw3-Uj-cZf">
+        <!--StockCategory-->
+        <scene sceneID="i2e-sV-gBi">
             <objects>
-                <viewControllerPlaceholder storyboardName="Stocks" id="nni-oL-Yxs" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="tRk-3Y-WcQ"/>
+                <viewControllerPlaceholder storyboardName="StockCategory" id="vhq-7c-X0Q" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="fgr-yc-EYE"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kjw-bz-StA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IHb-wY-4gS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-160" y="390"/>
-        </scene>
-        <!--Search-->
-        <scene sceneID="KZp-TH-oOT">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Search" id="Fi4-mf-GGr" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="fGE-f7-yOI"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tdf-y1-bUd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="106" y="389"/>
+            <point key="canvasLocation" x="48" y="331"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="Bo5-Tj-N2a">
+            <size key="intrinsicContentSize" width="-1" height="83"/>
+        </designable>
+    </designables>
 </document>
