--- a/Pyeon-Duck/Resources/StoryBoards/Stocks-Category/StockCategory.storyboard
+++ b/Pyeon-Duck/Resources/StoryBoards/Stocks-Category/StockCategory.storyboard
@@ -12,7 +12,7 @@
         <!--Item 2-->
         <scene sceneID="JRW-Rh-TBJ">
             <objects>
-                <viewController id="H1p-0P-zJH" customClass="StockCategoryVC" customModule="Pyeon_Duck" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StockCategoryVC" id="H1p-0P-zJH" customClass="StockCategoryVC" customModule="Pyeon_Duck" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zhe-Vi-Lfh">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
